# ImGuiSFMLExample

./: CMakeLists.txt
data/: config.json
data/scenes/: test.scene
include/: console.h  engine.h  log.h  utility.h
src/: console.cpp  engine.cpp  log.cpp  main.cpp  utility.cpp
